--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<!-- Заголовок страницы в браузере -->
 	<title>Go Corona</title>
 	<!-- Подключаем CSS -->
-	<link rel="stylesheet" href="/Corona/corona/css/style.css" />
+	<link rel="stylesheet" href="css/style.css" />
 	<!--Conect font's-->
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -258,7 +258,7 @@
 	<!--Підключаєм бібліотеку jQuery-->
 	<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"></script>
 	<!--Підключаєм файл JS-->
-	<script src="/Corona/corona/js/scrypt.js"></script>
+	<script src="js/scrypt.js"></script>
 </body>
 
 
