--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 	<div class="wrapper">
 		<header class="header">
 			<div class="header__container">
-				<a href="#" class="header__logo"><img src="/Corona/corona/img/logo.svg" alt="Logo"></a>
+				<a href="#" class="header__logo"><img src="img/logo.svg" alt="Logo"></a>
 				<div class="header__burger"><span></span><span></span><span></span></div>
 				<div class="header__content">
 					<nav class="header__menu menu">
@@ -91,7 +91,7 @@
 						</div>
 					</div>
 					<div class="health__image">
-						<img src="/Corona/corona/img/main/doc.svg" alt="Doctor width child">
+						<img src="img/main/doc.svg" alt="Doctor width child">
 					</div>
 					<div class="health__video">
 						<a target="_blank" href="https://www.youtube.com/" class="video-health">
@@ -115,7 +115,7 @@
 					<div class="corona__media">
 						<div class="media-corona">
 							<div class="media-corona__image">
-								<img src="/Corona/corona/img/main/program.svg" alt="application">
+								<img src="img/main/program.svg" alt="application">
 							</div>
 							<div class="media-corona__item media-corona__item-1"></div>
 							<div class="media-corona__item media-corona__item-2"></div>
@@ -199,7 +199,7 @@
 						<div class="content-helthcare__body">
 							<div class="content-helthcare__card">
 								<div class="content-helthcare__card-image"><img
-										src="/Corona/corona/img/healthcare-card-img-1.svg" alt="Helthcare Card Image"></div>
+										src="img/healthcare-card-img-1.svg" alt="Helthcare Card Image"></div>
 								<div class="content-helthcare__card-title">
 									<h3>Symptom Checker</h3>
 								</div>
@@ -210,7 +210,7 @@
 
 							<div class="content-helthcare__card">
 								<div class="content-helthcare__card-image"><img
-										src="/Corona/corona/img/healthcare-card-img-2.svg" alt="Helthcare Card Image"></div>
+										src="img/healthcare-card-img-2.svg" alt="Helthcare Card Image"></div>
 								<div class="content-helthcare__card-title">
 									<h3>24x7 Medical support</h3>
 								</div>
@@ -221,7 +221,7 @@
 
 							<div class="content-helthcare__card">
 								<div class="content-helthcare__card-image"><img
-										src="/Corona/corona/img/healthcare-card-img-3.svg" alt="Helthcare Card Image"></div>
+										src="img/healthcare-card-img-3.svg" alt="Helthcare Card Image"></div>
 								<div class="content-helthcare__card-title">
 									<h3>Conditions</h3>
 								</div>
@@ -243,10 +243,10 @@
 			<div class="footer__container">
 				<div class="footer__link-cards link-card">
 					<a href="#" class="link-card__body">
-						<img src="/Corona/corona/img/image2.svg" alt="Google Play Market Button">
+						<img src="img/image2.svg" alt="Google Play Market Button">
 					</a>
 					<a href="#" class="link-card__body link-card__body-2">
-						<img src="/Corona/corona/img/image3.svg" alt="Apple AppStore Button">
+						<img src="img/image3.svg" alt="Apple AppStore Button">
 					</a>
 				</div>
 			</div>
