--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 					</div>
 					<div class="health__video">
 						<a target="_blank" href="https://www.youtube.com/" class="video-health">
-							<div class="video-health__icon"><img src="/Corona/corona/img/icons/play.svg" alt="Play Button">
+							<div class="video-health__icon"><img src="img/icons/play.svg" alt="Play Button">
 							</div>
 							<div class="video-health__body">
 								<div class="video-health__title">
